yarn: create a scope guard for prober

--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,32 +14,33 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-15 Fri 10:36]
+#+CAPTION: Clock summary at [2017-09-15 Fri 13:43]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *43:33* |       |       | 100.0 |
+| *Total time*                                                                | *46:39* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 43:33   |       |       | 100.0 |
-| Active                                                                      |         | 43:33 |       | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:44 |   1.7 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:33 |   3.6 |
-| COMPLETED Remove object types in yarn                                       |         |       |  0:52 |   2.0 |
-| COMPLETED Clean-up readme                                                   |         |       |  1:15 |   2.9 |
-| COMPLETED Rename transformers to adapters                                   |         |       |  0:28 |   1.1 |
-| COMPLETED Analysis on annotations and profiles                              |         |       |  2:26 |   5.6 |
-| COMPLETED Use namespaced stereotypes                                        |         |       |  1:49 |   4.2 |
+| Stories                                                                     | 46:39   |       |       | 100.0 |
+| Active                                                                      |         | 46:39 |       | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:44 |   1.6 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:33 |   3.3 |
+| COMPLETED Remove object types in yarn                                       |         |       |  0:52 |   1.9 |
+| COMPLETED Clean-up readme                                                   |         |       |  1:15 |   2.7 |
+| COMPLETED Rename transformers to adapters                                   |         |       |  0:28 |   1.0 |
+| COMPLETED Analysis on annotations and profiles                              |         |       |  2:26 |   5.2 |
+| COMPLETED Use namespaced stereotypes                                        |         |       |  1:49 |   3.9 |
 | COMPLETED Tailor dogen models                                               |         |       |  0:21 |   0.8 |
-| COMPLETED Rename yarn concepts                                              |         |       |  7:49 |  17.9 |
+| COMPLETED Rename yarn concepts                                              |         |       |  7:49 |  16.8 |
 | COMPLETED Remove extra copying in mapper                                    |         |       |  0:05 |   0.2 |
-| COMPLETED Investigate the JSON break on Northwind model                     |         |       |  0:57 |   2.2 |
+| COMPLETED Investigate the JSON break on Northwind model                     |         |       |  0:57 |   2.0 |
 | COMPLETED Rename ODB parameters                                             |         |       |  0:11 |   0.4 |
-| COMPLETED Investigate usage of origin type                                  |         |       |  0:15 |   0.6 |
-| COMPLETED Improve dumping of models                                         |         |       | 12:59 |  29.8 |
-| COMPLETED Create yarn options                                               |         |       |  1:06 |   2.5 |
-| COMPLETED Merge knit with yarn                                              |         |       |  1:13 |   2.8 |
-| COMPLETED Add probing support to code generation tests                      |         |       |  2:45 |   6.3 |
-| STARTED Add canonical archetype support to yarn                             |         |       |  6:45 |  15.5 |
+| COMPLETED Investigate usage of origin type                                  |         |       |  0:15 |   0.5 |
+| COMPLETED Improve dumping of models                                         |         |       | 12:59 |  27.8 |
+| COMPLETED Create yarn options                                               |         |       |  1:06 |   2.4 |
+| COMPLETED Merge knit with yarn                                              |         |       |  1:13 |   2.6 |
+| COMPLETED Add probing support to code generation tests                      |         |       |  2:45 |   5.9 |
+| COMPLETED Find some way of scoping transform probing                        |         |       |  3:06 |   6.6 |
+| STARTED Add canonical archetype support to yarn                             |         |       |  6:45 |  14.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -707,6 +708,36 @@ binary. Where it is actually useful is with the unit tests so that we
 can try to figure out what broke. Add probing support to yarn code
 generation tests.
 
+*** COMPLETED Find some way of scoping transform probing              :story:
+    CLOSED: [2017-09-15 Fri 13:43]
+    CLOCK: [2017-09-15 Fri 10:37]--[2017-09-15 Fri 13:43] =>  3:06
+
+At present we are manually calling start/end transform. This is not
+ideal because:
+
+- we may forget to call it;
+- we may not look carefully at all the code paths; an early return
+  will cause mismatches;
+- we don't cope with exceptions.
+
+Scope guard/RAII was designed exactly for this. However, the problem
+we have is that we have a number of different APIs for start/end
+transform and it will be difficult to create a scope guard that can
+cater for all the permutations. We should classify the permutations
+and see if this is doable, even if we need several scope guards.
+
+We need:
+
+- transform description
+- transform id
+- model id (optional)
+- input (optional)
+- output (optional); triggers dismissal
+
+If output is not set we simply call end.
+
+We need a scope for chains and another for transforms.
+
 *** STARTED Add canonical archetype support to yarn                   :story:
     CLOCK: [2017-09-10 Sun 00:08]--[2017-09-10 Sun 00:18] =>  0:10
     CLOCK: [2017-09-09 Sat 23:40]--[2017-09-10 Sun 00:07] =>  0:27
@@ -817,34 +848,6 @@ exception and add a message asking the user to disable probing data.
 
 We could also perhaps have a mode with only directory numbers for
 windows so that we can at least use probing.
-
-*** Find some way of scoping transform probing                        :story:
-
-At present we are manually calling start/end transform. This is not
-ideal because:
-
-- we may forget to call it;
-- we may not look carefully at all the code paths; an early return
-  will cause mismatches;
-- we don't cope with exceptions.
-
-Scope guard/RAII was designed exactly for this. However, the problem
-we have is that we have a number of different APIs for start/end
-transform and it will be difficult to create a scope guard that can
-cater for all the permutations. We should classify the permutations
-and see if this is doable, even if we need several scope guards.
-
-We need:
-
-- transform description
-- transform id
-- model id (optional)
-- input (optional)
-- output (optional); triggers dismissal
-
-If output is not set we simply call end.
-
-We need a scope for chains and another for transforms.
 
 *** Remove dumping of models from log                                 :story:
 
