--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,33 +14,34 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-15 Fri 13:43]
+#+CAPTION: Clock summary at [2017-09-15 Fri 15:00]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *46:39* |       |       | 100.0 |
+| *Total time*                                                                | *47:06* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 46:39   |       |       | 100.0 |
-| Active                                                                      |         | 46:39 |       | 100.0 |
+| Stories                                                                     | 47:06   |       |       | 100.0 |
+| Active                                                                      |         | 47:06 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:44 |   1.6 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:33 |   3.3 |
-| COMPLETED Remove object types in yarn                                       |         |       |  0:52 |   1.9 |
+| COMPLETED Remove object types in yarn                                       |         |       |  0:52 |   1.8 |
 | COMPLETED Clean-up readme                                                   |         |       |  1:15 |   2.7 |
 | COMPLETED Rename transformers to adapters                                   |         |       |  0:28 |   1.0 |
 | COMPLETED Analysis on annotations and profiles                              |         |       |  2:26 |   5.2 |
 | COMPLETED Use namespaced stereotypes                                        |         |       |  1:49 |   3.9 |
-| COMPLETED Tailor dogen models                                               |         |       |  0:21 |   0.8 |
-| COMPLETED Rename yarn concepts                                              |         |       |  7:49 |  16.8 |
+| COMPLETED Tailor dogen models                                               |         |       |  0:21 |   0.7 |
+| COMPLETED Rename yarn concepts                                              |         |       |  7:49 |  16.6 |
 | COMPLETED Remove extra copying in mapper                                    |         |       |  0:05 |   0.2 |
 | COMPLETED Investigate the JSON break on Northwind model                     |         |       |  0:57 |   2.0 |
 | COMPLETED Rename ODB parameters                                             |         |       |  0:11 |   0.4 |
 | COMPLETED Investigate usage of origin type                                  |         |       |  0:15 |   0.5 |
-| COMPLETED Improve dumping of models                                         |         |       | 12:59 |  27.8 |
-| COMPLETED Create yarn options                                               |         |       |  1:06 |   2.4 |
+| COMPLETED Improve dumping of models                                         |         |       | 12:59 |  27.6 |
+| COMPLETED Create yarn options                                               |         |       |  1:06 |   2.3 |
 | COMPLETED Merge knit with yarn                                              |         |       |  1:13 |   2.6 |
-| COMPLETED Add probing support to code generation tests                      |         |       |  2:45 |   5.9 |
+| COMPLETED Add probing support to code generation tests                      |         |       |  2:45 |   5.8 |
 | COMPLETED Find some way of scoping transform probing                        |         |       |  3:06 |   6.6 |
-| STARTED Add canonical archetype support to yarn                             |         |       |  6:45 |  14.5 |
+| STARTED Catch directory generation errors in probe                          |         |       |  0:27 |   1.0 |
+| STARTED Add canonical archetype support to yarn                             |         |       |  6:45 |  14.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -738,6 +739,20 @@ If output is not set we simply call end.
 
 We need a scope for chains and another for transforms.
 
+*** STARTED Catch directory generation errors in probe                :story:
+    CLOCK: [2017-09-15 Fri 14:33]--[2017-09-15 Fri 15:00] =>  0:27
+
+Our paths are too deeply nested for windows machines, where there is a
+limitation on the maximum path size. When that happens we throw a ios
+error, which is not particularly informative. We should catch the
+exception and add a message asking the user to disable probing data.
+
+We could also perhaps have a mode with only directory numbers for
+windows so that we can at least use probing.
+
+Actually it seems the error is writing the file, not creating the
+directory since that is all covered by exceptions.
+
 *** STARTED Add canonical archetype support to yarn                   :story:
     CLOCK: [2017-09-10 Sun 00:08]--[2017-09-10 Sun 00:18] =>  0:10
     CLOCK: [2017-09-09 Sat 23:40]--[2017-09-10 Sun 00:07] =>  0:27
@@ -838,16 +853,6 @@ Tasks:
 Notes:
 
 - make is_enabled private in dependencies builder and see what breaks.
-
-*** Catch directory generation errors in probe                        :story:
-
-Our paths are too deeply nested for windows machines, where there is a
-limitation on the maximum path size. When that happens we throw a ios
-error, which is not particularly informative. We should catch the
-exception and add a message asking the user to disable probing data.
-
-We could also perhaps have a mode with only directory numbers for
-windows so that we can at least use probing.
 
 *** Remove dumping of models from log                                 :story:
 
