yarn: add short names version to probing directory and filenames
Try to get probing to work around windows file path limitations.

--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,34 +14,34 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-15 Fri 15:00]
+#+CAPTION: Clock summary at [2017-09-15 Fri 15:38]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *47:06* |       |       | 100.0 |
+| *Total time*                                                                | *47:44* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 47:06   |       |       | 100.0 |
-| Active                                                                      |         | 47:06 |       | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:44 |   1.6 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:33 |   3.3 |
+| Stories                                                                     | 47:44   |       |       | 100.0 |
+| Active                                                                      |         | 47:44 |       | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:44 |   1.5 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:33 |   3.2 |
 | COMPLETED Remove object types in yarn                                       |         |       |  0:52 |   1.8 |
-| COMPLETED Clean-up readme                                                   |         |       |  1:15 |   2.7 |
+| COMPLETED Clean-up readme                                                   |         |       |  1:15 |   2.6 |
 | COMPLETED Rename transformers to adapters                                   |         |       |  0:28 |   1.0 |
-| COMPLETED Analysis on annotations and profiles                              |         |       |  2:26 |   5.2 |
-| COMPLETED Use namespaced stereotypes                                        |         |       |  1:49 |   3.9 |
+| COMPLETED Analysis on annotations and profiles                              |         |       |  2:26 |   5.1 |
+| COMPLETED Use namespaced stereotypes                                        |         |       |  1:49 |   3.8 |
 | COMPLETED Tailor dogen models                                               |         |       |  0:21 |   0.7 |
-| COMPLETED Rename yarn concepts                                              |         |       |  7:49 |  16.6 |
+| COMPLETED Rename yarn concepts                                              |         |       |  7:49 |  16.4 |
 | COMPLETED Remove extra copying in mapper                                    |         |       |  0:05 |   0.2 |
 | COMPLETED Investigate the JSON break on Northwind model                     |         |       |  0:57 |   2.0 |
 | COMPLETED Rename ODB parameters                                             |         |       |  0:11 |   0.4 |
 | COMPLETED Investigate usage of origin type                                  |         |       |  0:15 |   0.5 |
-| COMPLETED Improve dumping of models                                         |         |       | 12:59 |  27.6 |
+| COMPLETED Improve dumping of models                                         |         |       | 12:59 |  27.2 |
 | COMPLETED Create yarn options                                               |         |       |  1:06 |   2.3 |
-| COMPLETED Merge knit with yarn                                              |         |       |  1:13 |   2.6 |
+| COMPLETED Merge knit with yarn                                              |         |       |  1:13 |   2.5 |
 | COMPLETED Add probing support to code generation tests                      |         |       |  2:45 |   5.8 |
-| COMPLETED Find some way of scoping transform probing                        |         |       |  3:06 |   6.6 |
-| STARTED Catch directory generation errors in probe                          |         |       |  0:27 |   1.0 |
-| STARTED Add canonical archetype support to yarn                             |         |       |  6:45 |  14.3 |
+| COMPLETED Find some way of scoping transform probing                        |         |       |  3:06 |   6.5 |
+| COMPLETED Catch directory generation errors in probe                        |         |       |  1:05 |   2.3 |
+| STARTED Add canonical archetype support to yarn                             |         |       |  6:45 |  14.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -739,7 +739,9 @@ If output is not set we simply call end.
 
 We need a scope for chains and another for transforms.
 
-*** STARTED Catch directory generation errors in probe                :story:
+*** COMPLETED Catch directory generation errors in probe              :story:
+    CLOSED: [2017-09-15 Fri 15:35]
+    CLOCK: [2017-09-15 Fri 15:01]--[2017-09-15 Fri 15:39] =>  0:34
     CLOCK: [2017-09-15 Fri 14:33]--[2017-09-15 Fri 15:00] =>  0:27
 
 Our paths are too deeply nested for windows machines, where there is a
