--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,14 +14,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-15 Fri 15:38]
+#+CAPTION: Clock summary at [2017-09-15 Fri 15:53]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *47:44* |       |       | 100.0 |
+| *Total time*                                                                | *47:50* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 47:44   |       |       | 100.0 |
-| Active                                                                      |         | 47:44 |       | 100.0 |
+| Stories                                                                     | 47:50   |       |       | 100.0 |
+| Active                                                                      |         | 47:50 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:44 |   1.5 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:33 |   3.2 |
 | COMPLETED Remove object types in yarn                                       |         |       |  0:52 |   1.8 |
@@ -30,17 +30,18 @@
 | COMPLETED Analysis on annotations and profiles                              |         |       |  2:26 |   5.1 |
 | COMPLETED Use namespaced stereotypes                                        |         |       |  1:49 |   3.8 |
 | COMPLETED Tailor dogen models                                               |         |       |  0:21 |   0.7 |
-| COMPLETED Rename yarn concepts                                              |         |       |  7:49 |  16.4 |
+| COMPLETED Rename yarn concepts                                              |         |       |  7:49 |  16.3 |
 | COMPLETED Remove extra copying in mapper                                    |         |       |  0:05 |   0.2 |
 | COMPLETED Investigate the JSON break on Northwind model                     |         |       |  0:57 |   2.0 |
 | COMPLETED Rename ODB parameters                                             |         |       |  0:11 |   0.4 |
 | COMPLETED Investigate usage of origin type                                  |         |       |  0:15 |   0.5 |
-| COMPLETED Improve dumping of models                                         |         |       | 12:59 |  27.2 |
+| COMPLETED Improve dumping of models                                         |         |       | 12:59 |  27.1 |
 | COMPLETED Create yarn options                                               |         |       |  1:06 |   2.3 |
 | COMPLETED Merge knit with yarn                                              |         |       |  1:13 |   2.5 |
-| COMPLETED Add probing support to code generation tests                      |         |       |  2:45 |   5.8 |
+| COMPLETED Add probing support to code generation tests                      |         |       |  2:45 |   5.7 |
 | COMPLETED Find some way of scoping transform probing                        |         |       |  3:06 |   6.5 |
 | COMPLETED Catch directory generation errors in probe                        |         |       |  1:05 |   2.3 |
+| COMPLETED Remove dumping of models from log                                 |         |       |  0:06 |   0.2 |
 | STARTED Add canonical archetype support to yarn                             |         |       |  6:45 |  14.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -755,6 +756,16 @@ windows so that we can at least use probing.
 Actually it seems the error is writing the file, not creating the
 directory since that is all covered by exceptions.
 
+*** COMPLETED Remove dumping of models from log                       :story:
+    CLOSED: [2017-09-15 Fri 15:53]
+    CLOCK: [2017-09-15 Fri 15:47]--[2017-09-15 Fri 15:53] =>  0:06
+
+*Rationale*: we didn't see any obvious places where this is happening.
+
+Once probing is in place, we need to remove all the dumps we are doing
+of models at present. These just add size to the log files for no
+reason.
+
 *** STARTED Add canonical archetype support to yarn                   :story:
     CLOCK: [2017-09-10 Sun 00:08]--[2017-09-10 Sun 00:18] =>  0:10
     CLOCK: [2017-09-09 Sat 23:40]--[2017-09-10 Sun 00:07] =>  0:27
@@ -855,12 +866,6 @@ Tasks:
 Notes:
 
 - make is_enabled private in dependencies builder and see what breaks.
-
-*** Remove dumping of models from log                                 :story:
-
-Once probing is in place, we need to remove all the dumps we are doing
-of models at present. These just add size to the log files for no
-reason.
 
 *** Drop the original extension in tailor                             :story:
 
