--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,7 +14,6 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-16 Sat 12:52]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
@@ -23,7 +22,7 @@
 | Stories                                                                     | 49:47   |       |       | 100.0 |
 | Active                                                                      |         | 49:47 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:44 |   1.5 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:33 |   3.1 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:43 |   3.5 |
 | COMPLETED Remove object types in yarn                                       |         |       |  0:52 |   1.7 |
 | COMPLETED Clean-up readme                                                   |         |       |  1:15 |   2.5 |
 | COMPLETED Rename transformers to adapters                                   |         |       |  0:28 |   0.9 |
@@ -111,6 +110,7 @@ For all other architectures and/or operative systems, you will need to build Dog
 - [[https://gitter.im/DomainDrivenConsulting/dogen][Gitter]]
 
 *** STARTED Sprint and product backlog grooming                       :story:
+    CLOCK: [2017-09-15 Fri 18:40]--[2017-09-15 Fri 18:50] =>  0:10
     CLOCK: [2017-09-10 Sun 00:19]--[2017-09-10 Sun 00:30] =>  0:11
     CLOCK: [2017-09-08 Fri 13:45]--[2017-09-08 Fri 13:53] =>  0:08
     CLOCK: [2017-09-02 Sat 12:45]--[2017-09-02 Sat 13:14] =>  0:29
@@ -970,6 +970,22 @@ way because we need to build any language-specific structures that the
 dependencies builder requires. However, we can create an interface for
 the dependencies builder in yarn and implement it in each kernel. Each
 kernel must also supply a factory for the builders.
+
+*** Consider folding quilt into yarn                                  :story:
+
+In the far distant future, when we finally finish merging all the
+quilt specific stuff into yarn (e.g. formattables), it actually makes
+sense to deprecate quilt as a concept. Yarn then becomes the central
+point, and frontends and backends are just implementations that hook
+into it. Thus we then have simply =yarn.cpp= and =yarn.csharp=.
+
+However, there is still a concept that needs to be captured: the
+kernel. That is, a set of backends that work together to provide some
+kind of "service". In quilt's case the basic type definitions. We
+could potentially want to implement other backends that are totally
+distinct from quilt. However, we still do not have a concrete use case
+for this. Thus it may make more sense to just fold now and worry about
+these more flexible use cases when they arrive. We can always rename.
 
 *** Use element ids for associations                                  :story:
 
